# NyuModel_public

./: .env  Cargo.toml  test.html
sql/: 0_create_database.sql  1_access_token.sql  1_account.sql
src/: accounts.rs  db_conn.rs  errors.rs  jwt_check.rs  main.rs  middleware.rs  models.rs  rate_limit.rs
src/handlers/: accounts.rs  healthcheck.rs  login.rs  mod.rs
src/persistance/: access.rs  accounts.rs  mod.rs
