[package]
name = "nyu_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
chrono = "0.4.31"
derive_more = "0.99.17"
dotenv = "0.15.0"
futures-util = "0.3.29"
jsonwebtoken = "9.2.0"
md5 = "0.7.0"
mysql = "24.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
